# store

./: .env  .env.dev  .env.example  .env.local.example  .env.production  .gitignore  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  FRONTEND_CLEANUP_SUMMARY.md  README.md  SESSIONPROVIDER_FIX_SUMMARY.md  Task-SalesTracking.md  Task-Table-Sharing-and-Cloning.md  Task-TanStack-Router-Migration.md  Task-backend-refactoring.md  Task-clean-architecture-implementation.md  Task-dashboard-refactoring.md  Task-fix-pagination-and-follow-instructions.md  Task-internationalization.md  Task-nextjs-layout-system.md  Task-user-settings-storage.md  changelog-Table-Sharing-and-Cloning.md  changelog-TanStack-Router-Migration.md  changelog-backend-refactoring.md  changelog-clean-architecture-implementation.md  changelog-dashboard-refactoring.md  changelog-nextjs-layout-system.md  changelog-sales-tracking.md  debug-test.js  dev-full-stack-remote.js  dev-full-stack.js  package-lock.json  package-root.json  package-scripts.json  package.json  prisma.config.ts  schema.sql  test-auth.cjs  test-data.csv  tsconfig.json  (+3 more)
.junie/: guidelines.md
admin/: package-lock.json  package.json  wrangler.toml.template
api/: wrangler.toml.template
claudedocs/: VERIFICATION_RESULTS.md
docs/: ADMIN_DUMMY_TABLES_SUMMARY.md  API.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  ENVIRONMENTS.md  README.md  TESTING_INSTRUCTIONS.md  TOKEN_RIGHTS_SYSTEM.md  TOKEN_SECURITY.md  Task-admin-dummy-tables.md  authentication.md  project-structure.md  (+6 more)
public-api/: Cargo.toml  wrangler.toml.template
public-api/src/: lib.rs
(+1370 files in other folders)
