[package]
name = "store-public-api"
version = "0.1.0"
edition = "2024"
authors = ["Eri Meilis <eri@admice.com>"]

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.1", features = ["d1"] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
